...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/exoplayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </com.google.android.exoplayer2.ui.PlayerView>

    <TextView
        android:id="@+id/tv_step_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8dp"
        android:gravity="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/dimen24sp"
...
