...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.udacity.mybakingapp.RecipeDetailFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size35sp"
            android:textStyle="bold"
...
            android:textColor="@color/color_black"
            android:textSize="@dimen/size22sp"
            android:textStyle="bold"
            tools:text="Recipe Steps" />

             <com.udacity.mybakingapp.MyRecyclerView
                 android:id="@+id/lv_Steps"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 android:fadeScrollbars="false"
                 android:choiceMode="singleChoice"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:listSelector="@drawable/genselector_rv"
...
